--- a/EasyLearn/UI/CustomControls/ExampleView.xaml
+++ b/EasyLearn/UI/CustomControls/ExampleView.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <materialDesign:Chip Margin="0 14 10 0" FontWeight="Bold" Foreground="#737373" FontFamily="Arial" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{Binding Content}" IsDeletable="True">
+        <materialDesign:Chip Margin="0 10 10 0" FontWeight="Bold" Foreground="{DynamicResource EasyGrayDark}" FontFamily="Arial" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{Binding Content}" IsDeletable="True">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="DeleteClick">
                     <i:InvokeCommandAction Command="{Binding RemoveCommand}"/>
