--- a/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
@@ -9,8 +9,8 @@
              mc:Ignorable="d"
              Visibility="{Binding IsVisible, Converter={converters:ReverseCollapseConverter}}">
     <Border BorderThickness="0.6" 
-            BorderBrush="#99bbff" 
-            Background="GhostWhite" 
+            BorderBrush="{DynamicResource MainColorLight}" 
+            Background="{DynamicResource EasyGrayLight}" 
             Margin="12 12 0 0" 
             Height="{Binding Height}" 
             VerticalAlignment="Top">
@@ -34,7 +34,7 @@
                            Text="{Binding PrepositionValue}"
                            Margin="6 0 0 0"
                            VerticalAlignment="Center" 
-                           Foreground="ForestGreen"
+                           Foreground="{DynamicResource EasyGreen}"
                            d:Text="on"/>
             </StackPanel>
 
@@ -50,38 +50,38 @@
                          Background="{DynamicResource EastGrayLight}"
                          Foreground="{Binding RatingProgressBarColor}"
                          Value="{Binding RatingValue}"
-                         BorderBrush="GhostWhite"
+                         BorderBrush="{DynamicResource EasyGray}"
                          Maximum="100"/>
 
             <Grid Width="Auto" Grid.Row="2" Margin="10 8 10 0" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3">
-                <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="30"></Border>
+                <Border Grid.Row="1" Background="{DynamicResource EasyWhite}" CornerRadius="15" Height="30"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="30" Width="85" HorizontalAlignment="Left">
                     <TextBlock Text="Перевод" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
-                           Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                           Foreground="{DynamicResource EasyWhite}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Border>
                 <TextBlock Text="{Binding TranslationValue}" FontSize="13" 
                            FontFamily="Arial" FontWeight="DemiBold"
-                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="95 0 16 0"/>
+                           Foreground="{DynamicResource EasyGrayDark}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="95 0 16 0"/>
             </Grid>
 
             <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="3" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsFirstExampleVisible, Converter={converters:ReverseCollapseConverter}}">
-                <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
+                <Border Grid.Row="1" Background="{DynamicResource EasyWhite}" CornerRadius="15" Height="45"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
                     <TextBlock Text="Пример" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
-                           Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                           Foreground="{DynamicResource EasyWhite}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Border>
                 <StackPanel Margin="88 0 16 0" VerticalAlignment="Center" HorizontalAlignment="Left">
                     <TextBlock Text="{Binding FirstExampleRussianValue}" FontSize="13" 
                            FontFamily="Arial" FontWeight="DemiBold"
-                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 4"/>
+                           Foreground="{DynamicResource EasyGrayDark}" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 4"/>
                     <TextBlock Text="{Binding FirstExampleEnglishValue}" FontSize="13" 
                            FontFamily="Arial" FontWeight="DemiBold"
-                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                           Foreground="{DynamicResource EasyGrayDark}" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </StackPanel>
 
             </Grid>
@@ -89,26 +89,26 @@
             <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="4" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsSecondExampleVisible, Converter={converters:ReverseCollapseConverter}}">
-                <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
+                <Border Grid.Row="1" Background="{DynamicResource EasyWhite}" CornerRadius="15" Height="45"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
                     <TextBlock Text="Пример" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
-                           Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                           Foreground="{DynamicResource EasyWhite}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Border>
                 <StackPanel Margin="88 0 16 0" VerticalAlignment="Center" HorizontalAlignment="Left">
                     <TextBlock Text="{Binding SecondExampleRussianValue}" FontSize="13" 
                            FontFamily="Arial" FontWeight="DemiBold"
-                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 4"/>
+                           Foreground="{DynamicResource EasyGrayDark}" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 4"/>
                     <TextBlock Text="{Binding SecondExampleEnglishValue}" FontSize="13" 
                            FontFamily="Arial" FontWeight="DemiBold"
-                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                           Foreground="{DynamicResource EasyGrayDark}" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </StackPanel>
             </Grid>
 
             <Button Style="{DynamicResource MaterialDesignFlatButton}"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
-                    Foreground="Gray"
+                    Foreground="{DynamicResource EasyGrayDark}"
                     Width="18"
                     Height="18"
                     Padding="1"
@@ -129,7 +129,7 @@
             </Button>
 
             <materialDesign:PackIcon Kind="Star" 
-                                     Foreground="Gold" 
+                                     Foreground="{DynamicResource EasyGold}" 
                                      Margin="1 1 0 0"
                                      Visibility="{Binding IsStudiedMarkVisible, Converter={converters:ReverseCollapseConverter}}"/>
 
