--- a/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
@@ -16,7 +16,7 @@
 
                 <!--Верхнее выплывающее меню-->
                 <materialDesign:DrawerHost.TopDrawerContent>
-                    <Border Background="GhostWhite" Height="58" BorderBrush="{DynamicResource MainColor}" BorderThickness="0.6 0 0 0.6">
+                    <Border Background="{DynamicResource EasyGrayLight}" Height="58" BorderBrush="{DynamicResource MainColor}" BorderThickness="0.6 0 0 0.6">
                         <Grid VerticalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -150,7 +150,7 @@
                     Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
 
                 <Button.CommandParameter>
-                    <Grid Margin="0 14">
+                    <Grid Margin="0">
 
                         <Grid.RowDefinitions>
                             <RowDefinition/>
@@ -161,15 +161,16 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
 
-                        <Grid Margin="14 0">
+                        <StackPanel Orientation="Horizontal" Margin="14">
                             <!--Текстбокс для введения комментария к новому CommonRelation-->
                             <TextBox Style="{DynamicResource EasyValidationTextBox}"
-                                     Width="260" 
+                                     Width="332" 
                                      Grid.Row="7"
                                      HorizontalAlignment="Left"
                                      materialDesign:HintAssist.IsFloating="False"
                                      materialDesign:ValidationAssist.Suppress="True"
                                      Padding="14 11"
+                                     Margin="0 0 14 0"
                                      Grid.ColumnSpan="3"
                                      InputLanguageManager.InputLanguage="ru-RU"
                                      KeyDown="OnCommentValueTextBoxKeyDown"
@@ -191,10 +192,25 @@
 
                             </TextBox>
 
-                            <Button Style="{StaticResource EasyCancelButton}" Height="38" Width="38"
+                            <Button Style="{StaticResource EasyCancelButton}" Height="39" Width="39"
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Center"
-                                    Margin="0 0 0 14"
+                                    Margin="0 0 14 0"
+                                    Padding="0">
+                                <materialDesign:PackIcon Kind="Edit" Height="28" Width="28" Foreground="{DynamicResource EasyRed}"
+                                                     VerticalAlignment="Center"
+                                                     HorizontalAlignment="Center"/>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{Binding DeleteCommonRelationCommand}"/>
+                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Button>
+                            <Button Style="{StaticResource EasyCancelButton}" Height="39" Width="39"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    Margin="0 0"
                                     Padding="0">
                                 <materialDesign:PackIcon Kind="TrashCanOutline" Height="28" Width="28" Foreground="{DynamicResource EasyRed}"
                                                      VerticalAlignment="Center"
@@ -206,26 +222,28 @@
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </Button>
-                        </Grid>
+                        </StackPanel>
 
                         <Border BorderBrush="{DynamicResource EasyGray}" 
                                     BorderThickness="0.5"
                                     Grid.Row="1"/>
 
                         <Grid Grid.Row="2"
-                              Margin="14 12 14 0"
-                                  Grid.Column="0"
-                                  Grid.ColumnSpan="3">
+                              Margin="14 10 14 0"
+                              Grid.Column="0"
+                              Grid.ColumnSpan="3">
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="199"/>
+                                <ColumnDefinition Width="199"/>
                                 <ColumnDefinition/>
-                                <ColumnDefinition/>
-                                <ColumnDefinition Width="0.12*"/>
                             </Grid.ColumnDefinitions>
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
-                                         Width="192"
+                                         Width="185"
                                          Padding="14 11"
-                                         Margin="0 0 7 0"
+                                         Margin="0 0 14 0"
+                                     HorizontalAlignment="Left"
+                                     materialDesign:ValidationAssist.Suppress="True"
                                          materialDesign:HintAssist.IsFloating="False"
                                          KeyDown="OnUpdateWindowExampleRussianValueTextBoxKeyDown"
                                          InputLanguageManager.InputLanguage="ru-RU"
@@ -249,11 +267,14 @@
                             </TextBox>
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
-                                         HorizontalAlignment="Stretch"
-                                         Width="192"
+                                         Width="185"
                                          Grid.Column="1"
-                                         Margin="7 0 0 0"
+                                         Margin="0 0 14 0"
                                          Padding="14 11"
+                                     materialDesign:ValidationAssist.Suppress="True"
+                                     
+                                     HorizontalAlignment="Left"
+                                     
                                          materialDesign:HintAssist.IsFloating="False"
                                          KeyDown="OnUpdateWindowExampleEnglishValueTextBoxKeyDown"
                                          Name="uwExampleEnglishValueTextBox"
@@ -277,13 +298,13 @@
                             </TextBox>
 
                             <Button Style="{DynamicResource EasyConfirmButton}"
-                                        Foreground="{DynamicResource green}"
+                                        Foreground="{DynamicResource EasyGreen}"
                                         Height="39"
                                         Width="39"
-                                        Margin="14 0 0 0"
+                                        Margin="0 0"
                                         IsEnabled="{Binding UwAddExampleButtonIsEnabled}"
                                         Name="uwAddExampleButton"
-                                        HorizontalAlignment="Center" VerticalAlignment="Top"
+                                        HorizontalAlignment="Right" VerticalAlignment="Top"
                                         Grid.Column="2">
                                 <materialDesign:PackIcon Kind="Add" Foreground="{DynamicResource EasyGreen}"/>
 
@@ -299,11 +320,11 @@
                         </Grid>
 
                         <ItemsControl ItemsSource="{Binding UwExampleViews}" 
-                                          Grid.Row="3"
-                                          Grid.Column="0"
-                                          Margin="0 0 0 14"
-                                          Width="450"
-                                          Grid.ColumnSpan="3">
+                                      Grid.Row="3"
+                                      Grid.Column="0"
+                                      Margin="0 0 0 10"
+                                      Width="430"
+                                      Grid.ColumnSpan="3">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel/>
@@ -319,7 +340,7 @@
                         <!--Кнопки отмены и подтверждения добавления нового CommonRelation-->
                         <Grid Grid.Row="5"
                               Width="230"
-                              Margin="14 12 14 0"
+                              Margin="0 10"
                               HorizontalAlignment="Center"
                               VerticalAlignment="Center">
 
@@ -385,13 +406,13 @@
 
                 <!--Диалоговое окно добавления нового CommonRelation-->
                 <Button.CommandParameter>
-                    <Grid Margin="0 14">
+                    <Grid Margin="0 14 0 10">
 
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
-                            <RowDefinition Height="Auto" MaxHeight="0.8"/>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
@@ -406,9 +427,9 @@
 
                         <!--Текстбокс для введения русского значения в новом CommonRelation-->
                         <TextBox Style="{DynamicResource EasyValidationTextBox}"
-                                 Width="215"
+                                 Width="214"
                                  Padding="14 11"
-                                 Margin="14 0 0 14"
+                                 Margin="14 0 7 14"
                                  InputLanguageManager.InputLanguage="ru-RU"
                                  materialDesign:ValidationAssist.Suppress="True"
                                  materialDesign:HintAssist.IsFloating="False"
@@ -437,8 +458,8 @@
                         <!--Комбобокс для выбора типа RussianUnit в новом CommonRelation-->
                         <ComboBox MaxDropDownHeight="200"
                                   Grid.Row="1"
-                                  Margin="14 0 0 14"
-                                  Width="215"
+                                  Margin="14 0 7 14"
+                                  Width="214"
                                   Padding="14 11"
                                   Grid.Column="0"
                                   KeyDown="OnRussianUnitTypeComboBoxKeyDown"
@@ -464,8 +485,8 @@
 
                         <!--Текстбокс для введения английского значения в новом CommonRelation-->
                         <TextBox Style="{DynamicResource EasyValidationTextBox}"
-                                 Width="215"
-                                 Margin="0 0 14 14"
+                                 Width="214"
+                                 Margin="7 0 14 14"
                                  Padding="14 11"
                                  materialDesign:ValidationAssist.Suppress="True"
                                  Grid.Column="2"
@@ -498,8 +519,8 @@
                         <ComboBox MaxDropDownHeight="200"
                                   Grid.Row="1"
                                   Grid.Column="2"
-                                  Margin="0 0 14 14"
-                                  Width="215"
+                                  Margin="7 0 14 14"
+                                  Width="214"
                                   Padding="14 11"
                                   KeyDown="OnEnglishUnitTypeComboBoxKeyDown"
                                   Name="awEnglishUnitTypeComboBox"
@@ -520,6 +541,7 @@
                         <TextBox Style="{DynamicResource EasyValidationTextBox}"
                                  Width="230" 
                                  Grid.Row="2"
+                                 Margin="0 0 0 14"
                                  materialDesign:HintAssist.IsFloating="False"
                                  materialDesign:ValidationAssist.Suppress="True"
                                  Padding="14 11"
@@ -547,16 +569,16 @@
 
                         <!--Надпись о том, что запись уже существует-->
                         <StackPanel VerticalAlignment="Center"
-                                    Margin="0 -10 0 0"
+                                    Margin="0 -6 0 0"
                                     HorizontalAlignment="Center" 
                                     Grid.Row="3" Grid.ColumnSpan="3" 
                                     Orientation="Horizontal" 
                                     Visibility="{Binding AwCommonRelationHasExistLableIsVisible, Converter={converters:ReverseCollapseConverter}}">
-                            <materialDesign:PackIcon Kind="AlertCircleOutline" Foreground="{DynamicResource error}" Margin="2"/>
+                            <materialDesign:PackIcon Kind="AlertCircleOutline" Foreground="{DynamicResource EasyRed}" Margin="2 0 2 0"/>
                             <TextBlock VerticalAlignment="Center"
                                            Margin="2 0 0 2"
                                            Text="Такая запись уже есть" 
-                                           Foreground="{DynamicResource error}"
+                                           Foreground="{DynamicResource EasyRed}"
                                            Style="{DynamicResource MaterialDesignSubtitle2TextBlock}"/>
                             <TextBlock/>
                         </StackPanel>
@@ -569,19 +591,19 @@
 
                         <!--Строка с добавлением примеров-->
                         <Grid Grid.Row="5"
-                                  Grid.Column="0"
-                                  Grid.ColumnSpan="3"
-                              Margin="14 14 14 0">
+                              Grid.Column="0"
+                              Grid.ColumnSpan="3"
+                              Margin="14 10 14 0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
-                                <ColumnDefinition Width="0.12*"/>
+                                <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
                                      Width="188"
                                      Padding="14 11"
-                                     Margin="0 0 7 0"
+                                     Margin="0 0 14 0"
                                      materialDesign:HintAssist.IsFloating="False"
                                      KeyDown="OnAddingWindowExampleRussianValueTextBoxKeyDown"
                                      InputLanguageManager.InputLanguage="ru-RU"
@@ -605,17 +627,16 @@
                             </TextBox>
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
-                                         HorizontalAlignment="Stretch"
-                                         Width="188"
-                                         Grid.Column="1"
-                                         Margin="7 0 0 0"
-                                         Padding="14 11"
-                                 materialDesign:HintAssist.IsFloating="False"
-                                     
-                                         KeyDown="OnAddingWindowExampleEnglishValueTextBoxKeyDown"
-                                         Name="awExampleEnglishValueTextBox"
-                                         InputLanguageManager.InputLanguage="en-US"
-                                         materialDesign:HintAssist.Hint="Пример на английском">
+                                     HorizontalAlignment="Stretch"
+                                     Width="188"
+                                     Grid.Column="1"
+                                     Margin="0 0 14 0"
+                                     Padding="14 11"
+                                     materialDesign:HintAssist.IsFloating="False"
+                                     KeyDown="OnAddingWindowExampleEnglishValueTextBoxKeyDown"
+                                     Name="awExampleEnglishValueTextBox"
+                                     InputLanguageManager.InputLanguage="en-US"
+                                     materialDesign:HintAssist.Hint="Пример на английском">
 
                                 <TextBox.Text>
                                     <Binding Path="AwExampleEnglishValue" UpdateSourceTrigger="PropertyChanged">
@@ -634,13 +655,13 @@
                             </TextBox>
 
                             <Button Style="{DynamicResource EasyConfirmButton}"
-                                        Foreground="{DynamicResource green}"
+                                        Foreground="{DynamicResource EasyGreen}"
                                         Height="39"
                                         Width="39"
-                                        Margin="14 0 0 0"
+                                        Margin="0 0 0 0"
                                         IsEnabled="{Binding AwAddExampleButtonIsEnabled}"
                                         Name="awAddExampleButton"
-                                        HorizontalAlignment="Center" VerticalAlignment="Top"
+                                        HorizontalAlignment="Right" VerticalAlignment="Top"
                                         Grid.Column="2">
                                 <materialDesign:PackIcon Kind="Add" Foreground="{DynamicResource EasyGreen}" />
 
@@ -656,11 +677,11 @@
                         </Grid>
 
                         <ItemsControl ItemsSource="{Binding AwExampleViews}" 
-                                          Grid.Row="6"
-                                          Grid.Column="0"
-                                          Margin="14 0 14 14"
-                                          Width="450"
-                                          Grid.ColumnSpan="3">
+                                      Grid.Row="6"
+                                      Grid.Column="0"
+                                      Margin="14 0 14 10"
+                                      Width="440"
+                                      Grid.ColumnSpan="3">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel/>
@@ -679,8 +700,8 @@
                         <!--Кнопки отмены и подтверждения добавления нового CommonRelation-->
                         <Grid Grid.Row="8"
                               Grid.Column="0"
-                              Width="230"
-                              Margin="0 14 0 0"
+                              Width="200"
+                              Margin="0 10 0 0"
                               Grid.ColumnSpan="3"
                               HorizontalAlignment="Center"
                               VerticalAlignment="Center">
