--- a/EasyLearn/UI/Resourses/Colors.xaml
+++ b/EasyLearn/UI/Resourses/Colors.xaml
@@ -1,27 +1,42 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="cancelButtonBorder" Color="#FFD00505"/>
-    <SolidColorBrush x:Key="error" Color="#FFA70404" />
-    <SolidColorBrush x:Key="pageBackground" Color="GhostWhite"/>
-    <SolidColorBrush x:Key="green" Color="ForestGreen"/>
 
-    <SolidColorBrush x:Key="MainColor" Color="#4d79ff"/>
-    <SolidColorBrush x:Key="MainColorDark" Color="#3366ff"/>
     <SolidColorBrush x:Key="MainColorSuperDark" Color="#000d33"/>
+    <SolidColorBrush x:Key="MainColorDark" Color="#3366ff"/>
+    <SolidColorBrush x:Key="MainColor" Color="#4d79ff"/>
     <SolidColorBrush x:Key="MainColorLight" Color="#99bbff"/>
     <SolidColorBrush x:Key="MainColorSuperLight" Color="#e6ebff"/>
 
+    <SolidColorBrush x:Key="EasyRedDark" Color="#a40e26"/>
     <SolidColorBrush x:Key="EasyRed" Color="#cf222e"/>
-    <SolidColorBrush x:Key="EastRedDark" Color="#a40e26"/>
     <SolidColorBrush x:Key="EasyRedLight" Color="#ff3333"/>
     <SolidColorBrush x:Key="EasyRedSuperLight" Color="#f6eeee"/>
 
+    <SolidColorBrush x:Key="EasyGreenDark" Color="#268c43"/>
     <SolidColorBrush x:Key="EasyGreen" Color="#2da44e"/>
-    <SolidColorBrush x:Key="EastGreenDark" Color="#268c43"/>
     <SolidColorBrush x:Key="EasyGreenLight" Color="#71da8d"/>
     <SolidColorBrush x:Key="EasyGreenSuperLight" Color="#eff5f1"/>
 
+    <SolidColorBrush x:Key="EasyGrayDark" Color="#616b61"/>
     <SolidColorBrush x:Key="EasyGray" Color="#bfbfbf"/>
-    <SolidColorBrush x:Key="EastGrayLight" Color="#f2f2f2"/>
+    <SolidColorBrush x:Key="EasyGrayLight" Color="GhostWhite"/>
 
+    <SolidColorBrush x:Key="EasyWhite" Color="#ffffff"/>
+
+    <SolidColorBrush x:Key="EasyBlack" Color="Black"/>
+
+    <SolidColorBrush x:Key="EasyGold" Color="Gold"/>
+
+
+    <LinearGradientBrush x:Key="ButtonBackgroundGray" StartPoint="0.5,1" EndPoint="0.5,0">
+        <GradientStop Color="#f4f4f4" Offset="1" />
+        <GradientStop Color="#e6e6e6" Offset="0" />
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="DisabledButtonBackgroundGray" StartPoint="0.5,1" EndPoint="0.5,0">
+        <GradientStop Color="#d9d9d9" Offset="1" />
+        <GradientStop Color="#e9e9e9" Offset="0.5" />
+        <GradientStop Color="#e9e9e9" Offset="0" />
+    </LinearGradientBrush>
+    
 </ResourceDictionary>
